@@ -5,7 +5,6 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.Test;
@@ -58,13 +57,11 @@ public class VerleihServiceImplTest
         medium = new CD("CD4", "baz", "foo", 123);
         medienbestand.fuegeMediumEin(medium);
         _medienListe = medienbestand.getMedien();
-        
-        // temporärer VormerkService
-        _vormerkService = new VormerkServiceImpl(null); // temporär null
+
+        _vormerkService = new VormerkServiceImpl();
         _service = new VerleihServiceImpl(kundenstamm, medienbestand,
-                new ArrayList<Verleihkarte>(), _vormerkService);
+                new ArrayList<Verleihkarte>());
         // nach Initialisierung richtigen VerleihService setzen
-        _vormerkService = new VormerkServiceImpl(_service);
     }
 
     @Test
@@ -84,7 +81,7 @@ public class VerleihServiceImplTest
         // nicht verliehenen Medien an
         List<Medium> verlieheneMedien = _medienListe.subList(0, 2);
         List<Medium> nichtVerlieheneMedien = _medienListe.subList(2, 4);
-        _service.verleiheAn(_kunde, verlieheneMedien, _datum);
+        _service.verleiheAn(_kunde, verlieheneMedien, _datum, _vormerkService);
 
         // Prüfe, ob alle sondierenden Operationen für das Vertragsmodell
         // funktionieren
@@ -142,19 +139,20 @@ public class VerleihServiceImplTest
                 ereignisse[0] = true;
             }
         };
-        _service.verleiheAn(_kunde,
-                Collections.singletonList(_medienListe.get(0)), _datum);
+
+        _service.verleiheAn(_kunde, List.of(_medienListe.get(0)), _datum,
+                _vormerkService);
         assertFalse(ereignisse[0]);
 
         _service.registriereBeobachter(beobachter);
-        _service.verleiheAn(_kunde,
-                Collections.singletonList(_medienListe.get(1)), _datum);
+        _service.verleiheAn(_kunde, List.of(_medienListe.get(1)), _datum,
+                _vormerkService);
         assertTrue(ereignisse[0]);
 
         _service.entferneBeobachter(beobachter);
         ereignisse[0] = false;
-        _service.verleiheAn(_kunde,
-                Collections.singletonList(_medienListe.get(2)), _datum);
+        _service.verleiheAn(_kunde, List.of(_medienListe.get(2)), _datum,
+                _vormerkService);
         assertFalse(ereignisse[0]);
     }
 
